--- a/projeto-gamer-manha/css/style.css
+++ b/projeto-gamer-manha/css/style.css
@@ -74,7 +74,7 @@ header .header-bottom {
 }
 
 header .header-bottom img.logo {
-    width: 86px;
+    width: 90px;
 }
 
 header .header-bottom nav {
@@ -83,6 +83,8 @@ header .header-bottom nav {
     left: -80vw;
     width: 80vw;
     height: calc(100vh - 60px);
+    align-items: center;
+
 
     display: flex;
     flex-direction: column;
@@ -103,14 +105,14 @@ header .header-bottom nav > a {
     font-size: 15px;
     text-align: center;
     text-decoration: none;
-    border-bottom: 2px solid #F9AA01;
+    /* border-bottom: 2px solid #F9AA01; */
 }
 
 header .header-bottom nav > a:last-of-type {
     border-bottom: none;
 }
 
-/* ícone de mídias sociais possibilidade position 
+/* ícone de mídias sociais possibilidade position
 header .header-bottom nav .midias-sociais {
     position: absolute;
     bottom: 20px;
@@ -123,6 +125,7 @@ header .header-bottom nav .midias-sociais {
     align-items: center;
 }
 */
+
 
 header .header-bottom nav .midias-sociais {
     /* border: 1px solid red; */
@@ -141,7 +144,7 @@ header .header-bottom .menu-usuarios {
     height: 170px;
     background-image: linear-gradient(to right bottom, rgba(27, 20, 38, 0.7), rgba(27, 20, 38, 0.4));
     backdrop-filter: blur(45px);
-    
+
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -159,13 +162,13 @@ main {
     width: 100%;
     height: 606px;
     padding: 40px 0;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 
-  
+
     background-image: url(../assets/images/fundo-banner-mobile.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -176,7 +179,7 @@ main {
     font-family: TitilliumWeb-Black;
     font-size: 40px;
     text-shadow: 0 0 7px #FD4255;
-    
+
 }
 
 .banner .botao-sobre {
@@ -200,11 +203,11 @@ main .jogos{
     height:590px;
     background-color: #1B1426;
 
-    display: flex; 
+    display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-  
+
 }
 
 /* tablet>=768px */
@@ -214,13 +217,13 @@ main .jogos{
 /*desktop>=1200px */
 
 @media screen and (min-width: 1200px) {
-   
+
     .layout-grid{
         width: 100%;
         max-width: 1200px;
 
 
-        border: 3px dotted yellowgreen;
+        /* border: 3px dotted yellowgreen; */
     }
 
     /*  HEADER */
@@ -229,7 +232,49 @@ main .jogos{
         position: static;
         height: 140px;
     }
-    
+
+    header .header-top{
+        /* block e o valor default da maioria dos elementos*/
+        display: block;
+        border-bottom: 2px solid #F9AA01;
+        height: 50px;
+
+        
+
+    }
+
+    header .header-top .contatos{
+
+        width: 415px;
+        display: flex;
+        justify-content: space-between;
+
+        font-family: inter;
+        font-size: 14px;
+        font-weight: 400;
+
+        /* border: 2px solid white; */
+    }
+
+    /* header .header-top .midias-sociais{
+        border: 2px solid white;
+    } */
+
+    header .header-top .contatos > div{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 10px;
+        /* border: 1px solid yellow; */
+    }
+
+    header .header-top .midias-sociais{
+        width:120px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
 
     header .menu-hamburger,
     header .menu-pontinhos,
@@ -237,7 +282,12 @@ main .jogos{
     header .header-bottom nav .email,
     header .header-bottom nav .midias-sociais {
      display: none;
-    }
+       }
+
+
+     header  .header-bottom{
+        height: 90px;
+     }
 
     header .header-bottom img.logo{
         width: 200px;
@@ -247,20 +297,30 @@ main .jogos{
         position: static;
         width: 440px;
         height: 50px;
+        padding: 0;
         flex-direction:row;
-        background-color: red; 
-        
+        align-items: center;
+
+    }
+
+    header .header-bottom nav > a{
+        border: none;
+
+font-size: 14px;
     }
 
 
     header .header-bottom .menu-usuarios{
         position: static;
         flex-direction: row;
-        width: 180px;
-        height: 50px;
+        justify-content: space-between;
+        width: 120px;
+        height: auto;
         background-color: transparent;
+
     }
 
+  
 
     /*  MAIN  */
 
@@ -270,4 +330,18 @@ main .jogos{
 }
 
 
+/* BANNER */
+
+.banner {
+       height: 722px;
+    /* altera imagem de fundo */
+    background-image: url(../assets/images/Banner_background_1.png);
+    background-size: cover;
+    background-position: top;
+}
+
+
+.banner h1{
+    font-size: 80px;
+}
 
