projeto gamer finalizando

--- a/projeto-gamer/css/equipes.css
+++ b/projeto-gamer/css/equipes.css
@@ -238,20 +238,14 @@ main {
     
 }
 
-.frm-img{
-    width: 124px;
-    height: 40px;
-   background-color: white;
-   
-}
 
 
+/* 
 .frm-img p{
-    /* width: 104px;
-    height: 20px; */
+    
     font-family:TitilliumWeb-Bold ;
     color: black;
-}
+} */
 
 
 
